# py-starter-kit

./: .dockerignore  .env.example  LICENSE  README.md  Taskfile.yml  main.py  pyproject.toml  pytest.ini
.github/workflows/: python-app.yml
deployments/: celery_worker.dockerfile  rest.dockerfile
deployments/local/: docker-compose.yml  infra.compose.yml
src/: config.py  containers.py  di.py
src/application/dto/: user_dto.py
src/application/services/: user_service.py
src/domain/background_task/: adaptor.py  repositories.py  value_objects.py
src/domain/users/: entities.py  exceptions.py  repositories.py  value_objects.py
src/infrastructure/mongodb/: config.py  model_registry.py
src/infrastructure/mongodb/models/: user.py
src/infrastructure/mongodb/repositories/: user.py
src/observability/: logging.py
src/presentation/celery_worker/: app.py
src/presentation/fastapi/: app.py
src/presentation/fastapi/v1/: router.py  users.py
src/presentation/taskiq/: app.py
src/presentation/taskiq/tasks/: registry.py  user.py
src/utils/: datetime_utils.py
tests/application/services/: test_user_service.py
tests/domain/background_task/: test_adaptor.py
tests/domain/users/: test_entities.py
tests/infrastructure/mongodb/: test_config.py
tests/infrastructure/mongodb/repositories/: test_user.py
tests/observability/: test_logging.py
tests/presentation/celery_worker/: test_app.py
tests/presentation/fastapi/: test_app.py
tests/presentation/fastapi/v1/: test_users.py
tests/presentation/taskiq/tasks/: test_user.py
