[project]
name = "py-starter-kit"
version = "1.0.0"
description = ""
authors = [
    {name = "Sohel Tarir",email = "sohel.tarir@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pydantic (>=2.11.1,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "celery (>=5.4.0,<6.0.0)",
    "dependency-injector (>=4.46.0,<5.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "beanie (>=1.29.0,<2.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "structlog (>=25.3.0,<26.0.0)",
    "asgi-correlation-id (>=4.3.4,<5.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "asyncclick (>=8.1.8,<9.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
mongomock-motor = "^0.0.35"
pytest-cov = "^6.1.1"
httpx = "^0.27.0"
black = "^25.1.0"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass",
    "@abstractmethod",
]
